--- a/manifest.json
+++ b/manifest.json
@@ -13,25 +13,25 @@
   "scope": "/",
   "icons": [
     {
-      "src": "assets/selinggonet.png",
+      "src": "assets/logo_192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "assets/selinggonet.png",
+      "src": "assets/logo_512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "assets/selinggonet.png",
+      "src": "assets/logo_192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "assets/selinggonet.png",
+      "src": "assets/logo_512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
