--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Selinggonet - Customer Management System",
+  "name": "Selinggonet",
   "short_name": "Selinggonet",
   "description": "Sistem manajemen pelanggan ISP dengan integrasi Google Sheets",
   "start_url": "/",
