--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,15 @@
 [build]
   publish = "."
+  functions = "netlify/functions"
 
 [build.environment]
   NODE_VERSION = "18"
+
+# API routes
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
 
 # SPA fallback
 [[redirects]]
