--- a/netlify/functions/package.json
+++ b/netlify/functions/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Netlify Functions for Selinggonet",
   "dependencies": {
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "abort-controller": "^3.0.0"
   }
 }
