--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.html",
   "scripts": {
     "start": "echo \"Error: no start script specified\" && exit 1",
-    "build": "echo 'No build step required for static files'"
+    "build": "echo 'No build step required for static files'",
+    "build:css": "tailwindcss -i ./src/input.css -o ./assets/css/main.css --watch"
   },
   "keywords": [
     "isp",
@@ -24,6 +25,9 @@
     "node": ">=18.0.0"
   },
   "devDependencies": {
-    "supabase": "^2.40.7"
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/forms": "^0.5.10",
+    "supabase": "^2.40.7",
+    "tailwindcss": "^3.4.17"
   }
 }
